<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/gray_background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/tenTitle"
            android:layout_gravity="center|left"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvSave"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:text="@string/butSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:paddingLeft="5dp"
        android:id="@+id/edTitle"
        android:background="@drawable/white_background"
        android:layout_margin="10dp"
        android:text="@string/txtTitle"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:paddingLeft="5dp"
        android:gravity="top"
        android:id="@+id/edDescription"
        android:background="@drawable/white_background"
        android:layout_margin="10dp"
        android:text="@string/txtDescription"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    <TextView
        android:layout_margin="10dp"
        android:text="@string/remind"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/hours"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/day"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/type"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvwork"
                android:background="@drawable/white_background"
                android:textSize="20sp"
                android:text="Work         |^"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tags"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tags"
                android:textColor="#9A8F8F"
                android:text="tags"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/weeks"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/weeks"
            android:text="weekdays"
            android:textColor="#9A8F8F"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/butTune"
        android:layout_marginLeft="10dp"
        android:text="@string/Tune"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
        <TextView
            android:background="@drawable/gray_background"
            android:id="@+id/tvFormFile"
            android:layout_marginLeft="10dp"
            android:text="@string/formfile"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
        <TextView
            android:background="@drawable/gray_background"
            android:id="@+id/tvFormDefaults"
            android:layout_marginLeft="10dp"
            android:text="@string/formdefaults"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
    </LinearLayout>
        <TimePicker
            android:id="@+id/time"
            android:visibility="gone"
            android:background="#E8E2A1"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="400dp"/>
<!--        <DatePicker-->
<!--            android:id="@+id/date"-->
<!--            android:visibility="gone"-->
<!--            android:background="#E8E2A1"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="500dp"/>-->
        <Button
            android:visibility="gone"
            android:id="@+id/butOK"
            android:text="Ok"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:visibility="gone"
            android:id="@+id/butCancel1"
            android:text="Cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</layout>